--- a/index.html
+++ b/index.html
@@ -11,13 +11,12 @@
 
 <body>
     <h1>Media Quries</h1>
-    <div class="box">
-        <div class="box1"> </div>
-        <div class="box2"></div>
-        <div class="box3"></div>
-        <div class="box4"></div>
-        <div class="box5"></div>
-    </div>
+    
+        <div class="box box1"> </div>
+        <div class="box box2"></div>
+        <div class="box box3"></div>
+        <div class="box box4"></div>
+        <div class="box box5"></div>
 </body>
 
 </html>
